--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "dj-rest-auth>=7.0.1",
     "django>=5.2.4",
     "django-allauth>=65.10.0",
+    "django-cors-headers>=4.7.0",
     "django-environ>=0.12.0",
+    "django-redis>=6.0.0",
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.0",
     "drf-yasg>=1.21.10",
