--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-rest-auth==7.0.1
 django==5.2.4
 django-allauth==65.10.0
 django-environ==0.12.0
+django-redis==6.0.0
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
 drf-yasg==1.21.10
@@ -16,6 +17,7 @@ pyjwt==2.9.0
 python-dotenv==1.1.1
 pytz==2025.2
 pyyaml==6.0.2
+redis==6.2.0
 requests==2.32.4
 sqlparse==0.5.3
 uritemplate==4.2.0
