--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Docker
+Dockerfile
+docker-compose.yml
+pyproject.toml
+.python-version
